examples/grpc-bridge/client/envoy-proxy-ext_proc-2.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9911
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          add_user_agent: true
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          stat_prefix: egress_http
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - grpc
              routes:
              - match:
                  prefix: "/kv.KV"
                  headers:
                  - name: "key"
                    exact_match: "key0"
                route:
                  cluster: backend-proxy
                typed_per_filter_config:
                  envoy.filters.http.ext_proc:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                    disabled: true
              - match:
                  prefix: "/kv.KV"
                  headers:
                  - name: "key"
                    exact_match: "key01"
                route:
                  cluster: backend-proxy
              - match:
                  prefix: "/kv.KV"
                  headers:
                  - name: "key"
                    exact_match: "key1"
                route:
                  cluster: backend-proxy
                typed_per_filter_config:
                  envoy.filters.http.ext_proc:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                    overrides:
                      metadata:
                        - key: "x-ext-proc-override"
                          value: "route1-override"
                        - key: "x-router1-original"
                          value: "route1-original"
              - match:
                  prefix: "/kv.KV"
                  headers:
                  - name: "key"
                    exact_match: "key2"
                route:
                  cluster: backend-proxy
                typed_per_filter_config:
                  envoy.filters.http.ext_proc:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                    overrides:
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-proc-proxy
                        timeout: 30s
                        initial_metadata:
                          - key: "x-ext-proc-override"
                            value: "route2-override"
                          - key: "x-router2-original"
                            value: "route2-original"
              - match:
                  prefix: "/kv.KV"
                  headers:
                  - name: "key"
                    exact_match: "key3"
                route:
                  cluster: backend-proxy
                typed_per_filter_config:
                  envoy.filters.http.ext_proc:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                    overrides:
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-proc-proxy
                        timeout: 30s
                        initial_metadata:
                          - key: "x-ext-proc-override"
                            value: "route3-override"
                          - key: "x-router3-original-overidable"
                            value: "route3-original-overidable"
                          - key: "x-router3-original"
                            value: "route3-original"
                      metadata:
                        - key: "x-router3-original-overidable"
                          value: "route3-override"
                        - key: "x-router3-metadata-append"
                          value: "route3-metadata-append"
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              failure_mode_allow: false
              async_mode: false
              allow_mode_override: true
              message_timeout: 360s
              grpc_service:
                envoy_grpc:
                  cluster_name: ext-proc-proxy
                timeout: 60s
                initial_metadata:
                  - key: "x-ext-proc-override"
                    value: "root"
                  - key: "x-ext-proc-original"
                    value: "root"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: backend-proxy
    type: STATIC
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http_protocol_options: {}
    load_assignment:
      cluster_name: backend-proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8811
  - name: ext-proc-proxy
    type: STATIC
    http2_protocol_options: {}
    load_assignment:
      cluster_name: backend-proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
